--- a/src/pages/ja/about.astro
+++ b/src/pages/ja/about.astro
@@ -26,7 +26,7 @@ import Layout from '../../layouts/Layout.astro';
               <p>メール：bayfront@ibayfront.com</p>
               <p>電話：06-7654-8667</p>
               <p>ファックス：06-7654-8667</p>
-              <p>営業時間：9:00～18:00（土日祝定休日）</p>
+              <p>営業時間：9:00～18:00（土•日•祝定休日）</p>
               <p>所在地：542-0081 大阪府大阪市中央区南船場1-3-10 サンライズ長堀 1106号</p>
             </div>
           </div>
@@ -48,19 +48,15 @@ import Layout from '../../layouts/Layout.astro';
 
             <div class="space-y-6 text-gray-200 font-light">
               <p class="flex items-start">
-                <span class="text-accent mr-2">●</span>
                 <span>２０２４年7月「Bayfront」に改名され、漢字は「前湾」という言葉です。「湾」　もともと河川や湖、海辺において、泥や砂が堆積してできた平地を指し、水深が深ければ水没し、浅ければ現れる場所です。「前湾」　最初的に水流に洗われ、浸透した土地です。</span>
               </p>
               <p class="flex items-start">
-                <span class="text-accent mr-2">●</span>
                 <span>Ｂａｙｆｒｏｎｔは名前通り、激流を乗り越え、オリジナリティへの強い決意が込められています。業界の定型的な認識の中で、法的・規範的な枠組みを基盤にしながら、より多くの革新的な思考を追求しています。世界的視点を取り入れ、日本の強みを活かし、優雅で居心地の良い住空間を提供します。2024年6月から、銀行認定の優良不動産プロジェクトを保有し、タワー、オフィスビル、商業施設、別荘、土地など多様な開発を進めています。</span>
               </p>
               <p class="flex items-start">
-                <span class="text-accent mr-2">●</span>
                 <span>運営チームは、長年にわたって金融データとサービス分野で深く活躍し、顧客資源の積み重ね、私たちの「精品汇」という特徴的なサービスが生まれました。「精（こだわりオーダーメイド）」「品（品質優先）」「汇（最適化）」です。</span>
               </p>
               <p class="flex items-start">
-                <span class="text-accent mr-2">●</span>
                 <span>BAYFRONTは、全力でみんなの力を合わせて、不動産業界で注目される存在を目指しています。</span>
               </p>
             </div>
