--- a/src/pages/zh/about.astro
+++ b/src/pages/zh/about.astro
@@ -18,7 +18,7 @@ import Layout from '../../layouts/Layout.astro';
             <h2 class="text-2xl text-white font-light tracking-wider mb-8">公司概况</h2>
             <div class="space-y-4 text-gray-200 font-light">
               <p>公司名称：Bayfront株式会社</p>
-              <p>成立时间：令和2年2月</p>
+              <p>成立时间：2020年2月</p>
               <p>代表：董事长 Zhang Denis Wei</p>
               <p>注册资本：500万日元</p>
               <p>经营范围：不动产买卖、购置、运营管理</p>
@@ -48,19 +48,15 @@ import Layout from '../../layouts/Layout.astro';
 
             <div class="space-y-6 text-gray-200 font-light text-base">
               <p class="flex items-start">
-                <span class="text-accent mr-2 text-base">●</span>
                 <span>2024年7月，我们更名为"Bayfront（前湾）"。"湾"字原指河流、湖泊、海洋的湾岸地带，象征着水与陆地的交汇之处，代表着连接与流动。"前湾"象征着最先接受潮水冲刷的沃土。</span>
               </p>
               <p class="flex items-start">
-                <span class="text-accent mr-2 text-base">●</span>
                 <span>这个名字体现了我们勇于面对激流、追求创新的决心。在行业固有的循规蹈矩思维下，我们在遵守法律法规的基础上，追求更多创新思维。我们以国际视野，融入日本优势，打造优雅舒适的居住空间。自2024年6月起，我们持有银行认证的优质不动产项目，开发包括塔楼、写字楼、商业设施、别墅、土地等多元化项目。</span>
               </p>
               <p class="flex items-start">
-                <span class="text-accent mr-2 text-base">●</span>
                 <span>运营团队在金融数据和服务领域拥有多年深厚经验，积累了丰富的客户资源，形成了我们独特的"精品汇"服务模式："精"（个性化定制）、"品"（品质优先）、"汇"（资源优化）。</span>
               </p>
               <p class="flex items-start">
-                <span class="text-accent mr-2 text-base">●</span>
                 <span>BAYFRONT将凝聚众人之力，全力拓展，致力成为日本不动产行业的瞩目存在。</span>
               </p>
             </div>
