--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,9 +55,9 @@ import Layout from '../layouts/Layout.astro';
 
   <section class="py-16 bg-primary/80">
     <div class="container mx-auto px-8 text-center">
-      <a href="/business" class="inline-block px-12 py-4 text-white border-2 border-accent hover:bg-accent transition-colors duration-300 tracking-wider">
+      <!-- <a href="/business" class="inline-block px-12 py-4 text-white border-2 border-accent hover:bg-accent transition-colors duration-300 tracking-wider">
         SEE MORE
-      </a>
+      </a> -->
     </div>
   </section>
 </Layout>
