update about page description

--- a/src/pages/zh/about.astro
+++ b/src/pages/zh/about.astro
@@ -19,21 +19,24 @@ import Layout from '../../layouts/Layout.astro';
             <div class="space-y-4 text-gray-200 font-light text-base">
               <p class="flex items-start">
                 <span class="text-accent mr-2 text-base">●</span>
-                <span>为客户提供高品质的生活方式</span>
+                <span>为客户的高品质生活方式提供专业服务</span>
               </p>
               <p class="flex items-start">
                 <span class="text-accent mr-2 text-base">●</span>
-                <span>满足不动产投资、融资方案、咨询等各类投资需求</span>
+                <span>满足客户对不动产投资、融资方案、市场咨询等各类投资需求</span>
               </p>
             </div>
           </div>
 
           <div class="space-y-6 text-gray-200 font-light text-base">
             <p class="flex items-start">
-              <span>2024年7月更名为Bayfront，更名意图为"前湾"。"湾"，原释义为江河湖海边泥沙淤积成的平地，水深时淹没，水浅时露出。"前湾"，意味着最先经历冲刷洗礼的一块沃土。</span>
+              <span>株式会社成立于令和2年2月（2020年），令和6年7月（2024年）更名为Bayfront——"前湾"。</span>
             </p>
             <p class="flex items-start">
-              <span>以此命名，寓义勇闯激流，立求创新的决心和意志。在行业中按部就班的固有意识形态下，以合规合法为基础，寻求更多创新思维。在土地稀缺，资源有限的环境中，以世界的眼光，引入高品位风格，整合日本优势，弥补人文差异，运用专业的投资服务理念，打造出独特的闲怡、舒适、静雅的个性化宜居空间。</span>
+              <span>"湾"，原释义为水流弯曲的沿岸陆地。历来既是船舶停靠的港湾，又是经济命脉的前沿。"前湾"，更意味着是最先经历洗礼的一块沃土。</span>
+            </p>
+            <p class="flex items-start">
+              <span>以此命名，寓义勇闯激流，立求创新，执着专业的决心和意志。在行业中以合规合法的职业操手为基础，寻求更多创新思维。在土地稀缺，资源有限的环境中，以世界的眼光，引入高品位风格，整合日本优势，弥补人文差异，运用专业的投资服务理念，打造出独特的闲怡、舒适、静雅的个性化宜居空间。</span>
             </p>
             <p class="flex items-start">
               <span>向客户传递 "精品汇"的特色服务模式。即，"精（小众定制）；品 （品质优先）；汇（优化资源）"</span>
