--- a/src/pages/ja/about.astro
+++ b/src/pages/ja/about.astro
@@ -19,24 +19,27 @@ import Layout from '../../layouts/Layout.astro';
             <div class="space-y-4 text-gray-200 font-light">
               <p class="flex items-start">
                 <span class="text-accent mr-2">●</span>
-                <span>お客様のために高品質な生活スタイル提供する</span>
+                <span>お客様に上質なライフスタイルを実現するための専門的なサポート</span>
               </p>
               <p class="flex items-start">
                 <span class="text-accent mr-2">●</span>
-                <span>不動産投資、融資プラン、コンサルティング等様々な投資ニーズに対応できる</span>
+                <span>不動産投資、ファイナンスプランニング、市場調査など、あらゆる投資ニーズに対応</span>
               </p>
             </div>
           </div>
 
           <div class="space-y-6 text-gray-200 font-light">
             <p class="flex items-start">
-              <span>２０２４年7月「Bayfront」に改名され、漢字は「前湾」という言葉です。「湾」　もともと河川や湖、海辺において、泥や砂が堆積してできた平地を指し、水深が深ければ水没し、浅ければ現れる場所です。「前湾」　最初的に水流に洗われ、浸透した土地です。</span>
+              <span>令和2年2月（2020年）に設立され、令和6年7月（2024年）に「Bayfront——前湾」に社名変更いたしました。</span>
             </p>
             <p class="flex items-start">
-              <span>Ｂａｙｆｒｏｎｔは名前通り、激流を乗り越え、オリジナリティへの強い決意が込められています。業界の定型的な認識の中で、法的・規範的な枠組みを基盤にしながら、より多くの革新的な思考を追求しています。世界的視点を取り入れ、日本の強みを活かし、優雅で居心地の良い住空間を提供します。2024年6月から、銀行認定の優良不動産プロジェクトを保有し、タワー、オフィスビル、商業施設、別荘、土地など多様な開発を進めています。</span>
+              <span>「湾」もともと水流が曲がる沿岸の土地です。昔から船舶が停泊する港であり、経済の命脈となる最前線でもあります。Ｂａｙｆｒｏｎｔは名前通り、激流を切り拓き、オリジナリティへの強い決意が込められています。</span>
             </p>
             <p class="flex items-start">
-              <span>運営チームは、長年にわたって金融データとサービス分野で深く活躍し、顧客資源の積み重ね、私たちの「精品汇」という特徴的なサービスが生まれました。「精（こだわりオーダーメイド）」「品（品質優先）」「汇（最適化）」です。</span>
+              <span>Ｂａｙｆｒｏｎｔはより多くの革新的な思考を追求しています。世界的な視点を取り入れ、日本の強みを活かし、人文的な差異を補い、専門的な投資理念を駆使し、優雅で居心地の良い住空間を提供します</span>
+            </p>
+            <p class="flex items-start">
+              <span>お客様に「精品汇」の特徴的なサービスモデルを提供します。すなわち、「精（こだわりオーダーメイド）」、「品（品質優先）」、「汇（最適化）」</span>
             </p>
             <p class="flex items-start">
               <span>BAYFRONTは、全力でみんなの力を合わせて、不動産業界で注目される存在を目指しています。</span>
