--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from '../layouts/Layout.astro';
     </div>
   </section>
 
-  <section class="py-24 bg-primary">
+  <!-- <section class="py-24 bg-primary">
     <div class="container mx-auto px-8">
       <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
         <div>
@@ -63,7 +63,7 @@ import Layout from '../layouts/Layout.astro';
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="py-16 bg-primary/80">
     <div class="container mx-auto px-8 text-center">
