--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import MobileMenu from '../components/MobileMenu.astro';
 import { getRelativeLocaleUrl } from 'astro:i18n';
+import SpeedInsights from "@vercel/speed-insights/astro";
 
 interface Props {
   title: string;
@@ -75,6 +76,11 @@ const getLocalizedUrl = (targetLang: string, path: string) => {
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <script is:inline>
+      function speedInsightsBeforeSend(data) {
+        return data;
+      }
+    </script>
     <style>
       body {
         font-family: 'Montserrat', sans-serif;
@@ -153,5 +159,6 @@ const getLocalizedUrl = (targetLang: string, path: string) => {
         </div>
       </div>
     </footer>
+    <SpeedInsights />
   </body>
 </html> 
